--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "stamper",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Windows service that listens for a keystroke trigger to process a timestamp from a file and combine it with a song title to create a track list for YouTube videos from OBS recordings",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "watch": "nodemon index.js",
+    "start": "node app.js",
+    "watch": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Freyr H",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "node-fetch": "^3.2.10",
+    "socket.io-client": "2.4"
+  }
 }
