--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "node-fetch": "^3.2.10",
     "node-global-key-listener": "^0.1.1",
     "socket.io-client": "2.4"
