--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "chokidar": "^3.5.3",
+    "mongoose": "^6.7.2",
     "node-fetch": "^3.2.10",
     "node-global-key-listener": "^0.1.1",
     "socket.io-client": "2.4"
