Updated .gitignore to reflect current structure

--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-/timestamp.txt
-/exported_youtube_timestamps.txt
-/sessiondata.json
+exported_youtube_timestamps.txt
+sessiondata.json
 settings.json
