--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-exported_youtube_timestamps.txt
+/backups/
 sessiondata*.json
 settings.json
 /toImport.txt
