--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^5.1.2",
     "chokidar": "^3.5.3",
+    "dotenv": "^16.0.3",
     "inquirer": "^9.1.4",
     "mongoose": "^6.7.2",
     "node-fetch": "^3.2.10",
