--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chokidar": "^3.5.3",
     "dotenv": "^16.0.3",
     "inquirer": "^9.1.4",
+    "keypress": "^0.2.1",
     "mongoose": "^6.7.2",
     "node-fetch": "^3.2.10",
     "node-global-key-listener": "^0.1.1",
