Add some safety checks to prevent runtime errors - Add checks for session data loads - Add constructor with default values for ISong in song.controller.ts - Add builds folder to .gitignore - Add safety check to database cleanup function

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "npm run build && node build/app.js",
-    "start:dev": "nodemon",
+    "start:dev": "set DB_NAME=test& npm run build && node build/app.js",
+    "watch": "set DB_NAME=test& nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc"
   },
