--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^6.7.2",
     "node-fetch": "^3.2.10",
     "node-global-key-listener": "^0.1.1",
+    "open": "^8.4.0",
     "socket.io-client": "2.4"
   }
 }
